--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "ai-recipes",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.1",
+  "homepage": "https://github.com/dhsosa98/ai-recipes",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -13,6 +17,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
     "axios": "^1.3.2",
+    "gh-pages": "^5.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
